--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.0.0-beta.2", features = ["yaml"] }
-aes-gcm = "0.9.2"
-
-[[bin]]
-name = "Image-Encryption-System"
-path = "main.rs"
+aes = "0.7"
+block-modes = "0.8"
+rand = "0.8"
+anyhow = "1.0"
